Bug 689320 - Function `malloc' implicitly converted to pointer
Summary: Function `malloc' implicitly converted to pointer
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Font API (show other bugs)
Version: master
Hardware: All All
: P4 normal
Assignee: Ralph Giles
URL: http://www.cups.org/str.php?L1235
Keywords:
Depends on:
Blocks: 689315
  Show dependency treegraph
 
Reported: 2007-07-04 04:29 UTC by Till Kamppeter
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
Function `malloc' implicitly converted to pointer (2.92 KB, patch)
2007-07-04 04:31 UTC, Till Kamppeter
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Till Kamppeter 2007-07-04 04:29:20 UTC
See

http://www.cups.org/str.php?L1235

----------------------------------------------------------------------------
This bug was reported against gs-esp earlier today.  The original report is
available here: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=320856
I have pasted the text here, though the patch might be slightly mangled.

Regards,
Roger


Function `malloc' implicitly converted to pointer at ./src/fapi_ft.c:136

Our automated buildd log filter[1] detected a problem that will cause
your package to segfault on architectures where the size of a pointer is
greater than the size of an integer, such as ia64.

[1]http://people.debian.org/~dannf/check-implicit-pointer-functions

--- gs-esp-8+8.15rc3.dfsg.1/src/fapi_ft.c.orig 2005-08-01 17:10:01.424353206 -0600
+++ gs-esp-8+8.15rc3.dfsg.1/src/fapi_ft.c 2005-08-01 17:04:46.643107062 -0600
@@ -37,6 +37,7 @@
 #include FT_OUTLINE_H
 #include FT_TRIGONOMETRY_H
 
+#include <stdlib.h>
 #include <assert.h>
 
 /* Note: structure definitions here start with FF_, which stands for 'FAPI
FreeType". */
----------------------------------------------------------------------------

Patch is attached.
Comment 1 Till Kamppeter 2007-07-04 04:31:11 UTC
Created attachment 3139 [details]
Function `malloc' implicitly converted to pointer
Comment 2 Ralph Giles 2007-07-10 09:34:45 UTC
the include should probably malloc_.h not stdlib.h
Comment 3 Ralph Giles 2007-07-10 17:26:36 UTC
Fixed in r8117.