Replace to includes of the system stdlib.h for malloc() with malloc_.h. Bug 689320.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8117 a1074d23-0009-0410-80fe-cf8c14f379e6