gs/src/fapi_ft.c
@@ -19,6 +19,7 @@ Started by Graham Asher, 6th June 2002.
 
 /* GhostScript headers. */
 #include "stdio_.h"
+#include "malloc_.h"
 #include "ierrors.h"
 #include "ifapi.h"
 #include "write_t1.h"
